--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ requests
 gevent
 scrapelib
 lxml
--e git+https://github.com/seomoz/url-py.git#egg=url
+-e git+https://github.com/seomoz/url-py.git#egg=url-0.1.2dev
